# skid-clock-v2

./: .gitignore  Cargo.toml  README.md  sdkconfig.defaults
models/: skid-clock.FCStd
src/: app_context.rs  apps.rs  display.rs  input.rs  main.rs  network_manager.rs  pin_config.rs  rtc.rs  secret_manager.rs  ui.rs
src/apps/: calculator.rs  clock.rs  games.rs  main_menu.rs  settings.rs  time_tools.rs
src/apps/games/: brick.rs  dino.rs  flappy_bird.rs  game_2048.rs  gold_miner.rs  gomoku.rs  jump_jump.rs  menu.rs  naval_battle.rs  pacman.rs  pong.rs  snake.rs  stack.rs  stick_needle.rs  tank_trouble.rs  target.rs  tetris.rs  undertale.rs  whac_mole.rs
src/apps/settings/: menu.rs  network.rs  time.rs
src/apps/time_tools/: countdown.rs  menu.rs  pomodoro.rs  stopwatch.rs
src/rtc/: ds1302.rs
src/ui/: ctx.rs  layout.rs  widgets.rs
src/ui/widgets/: button.rs  checkbox.rs  divider.rs  keyboard.rs  label.rs  progress_bar.rs  scroll_list.rs  slider.rs  spinbox.rs
