[package]
name = "skid-clock-v2"
version = "0.1.0"
authors = ["cubewhy <qby140326@gmail.com>"]
edition = "2024"
resolver = "3"

[[bin]]
name = "skid-clock-v2"
harness = false        # do not use the built-in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"
strip = true

[profile.dev]
debug = true    # Symbols are nice, and they don't increase the size on Flash
opt-level = "z"
[patch.crates-io]
esp-idf-sys = { git = "https://github.com/esp-rs/esp-idf-sys.git" }
esp-idf-hal = { git = "https://github.com/esp-rs/esp-idf-hal.git" }
esp-idf-svc = { git = "https://github.com/esp-rs/esp-idf-svc.git" }

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.52.1", features = [
  "critical-section",
  "embassy-time-driver",
  "embassy-sync",
] }
# Remove `generic-queue-8` if you plan to use `embassy-time` WITH `embassy-executor`
embassy-time = { version = "0.5", features = ["generic-queue-8"] }

anyhow = "1.0"
embedded-graphics = "0.8.2"
u8g2-fonts = "0.8"
embedded-hal-bus = "0.3"
display-interface = "*"
bitflags = "2.13.0"
rand = "0.10"

ssd1306 = "0.10"
mini-oled = "0.1"
chrono = "0.4"

[build-dependencies]
embuild = "0.33"
