[package]
name = "skid-clock-v2"
version = "0.1.0"
edition = "2024"
resolver = "3"

[[bin]]
harness = false  # do not use the built-in cargo test harness -> resolve rust-analyzer errors
name = "skid-clock-v2"

[dependencies]
# Remove `generic-queue-8` if you plan to use `embassy-time` WITH `embassy-executor`
embassy-time = { version = "0.5", features = ["generic-queue-8"] }
esp-idf-svc = {
  version = "0.52.1",
  features = [
    "critical-section",
    "embassy-sync",
    "embassy-time-driver",
  ]
}
log = "0.4"

anyhow = "1.0"
bitflags = "2.13.0"
display-interface = "*"
embedded-graphics = "0.8.2"
embedded-hal-bus = "0.3"
rand = "0.10"
u8g2-fonts = "0.8"

chrono = "0.4"
mini-oled = "0.1"
ssd1306 = "0.10"

[build-dependencies]
embuild = "0.33"

[features]
default = []
jump_jump_cheat = []

[patch.crates-io]
esp-idf-hal = { git = "https://github.com/esp-rs/esp-idf-hal.git" }
esp-idf-svc = { git = "https://github.com/esp-rs/esp-idf-svc.git" }
esp-idf-sys = { git = "https://github.com/esp-rs/esp-idf-sys.git" }

[profile.dev]
opt-level = "z"
debug = true  # Symbols are nice, and they don't increase the size on Flash

[profile.release]
opt-level = "s"
strip = true
